Fake Daten für Test Backend und Test Backend Server konfiguriert

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -20,6 +20,10 @@
     <div class="hero background-superhero-paper is-large">
         <img src="../assets/icon/16599-illustration-of-stacks-of-gold-coins-ve.svg" class="hero-logo"/>
         <h1 class="text-headline">Mehr Geld<br>Zuhause &amp; Unterwegs.</h1>
+        <button md-raised-button color="primary">Drück Mich</button>
+        <button md-fab>
+            <md-icon class="md-24">add</md-icon>
+        </button>
         <a href="/docs/ts/latest/quickstart.html"
            md-button="md-button"
            class="hero-cta md-raised button button-large button-plain">
