--- a/web/src/assets/css/main.css
+++ b/web/src/assets/css/main.css
@@ -1,349 +1,4 @@
-.l-offset-nav {
-    padding-top: 56px;
-}
-
-body {
-    font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-size: 14px;
-    color: #546e7a;
-}
-
-body {
-    margin: 0;
-}
-
-.main-nav {
-    background: #1976D2;
-    height: 56px;
-    min-height: 56px;
-    padding: 0;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.24);
-}
-
-.l-layer-5 {
-    z-index: 5;
-}
-
-.l-pinned-top {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-}
-
-.main-nav h1 {
-    margin: 0 72px 0 0;
-    padding: 0;
-    height: 56px;
-    width: 168px;
-    float: left;
-}
-
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
-
-.main-nav h1 .md-button, .main-nav h1 a {
-    background: url("/resources/images/logos/standard/logo-nav.png") 16px 8px no-repeat;
-    border-radius: 0;
-    display: block;
-    height: 56px;
-    overflow: hidden;
-    text-indent: -3000px;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    color: #1976d2;
-    text-decoration: none;
-}
-
-a {
-    background-color: transparent;
-}
-
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
-
-sup {
-    top: -0.5em;
-}
-
-sub, sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-
-.main-nav .main-nav-button.main-nav-mobile-trigger {
-    display: none;
-    padding: 0 32px 0 8px;
-    font-size: 14px;
-}
-
-.main-nav .main-nav-button, .main-nav .main-nav-button.md-button {
-    line-height: 56px;
-    display: inline-block;
-    color: #fff;
-    text-decoration: none;
-    padding: 0 16px;
-    text-transform: uppercase;
-    font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    border: none;
-    background: none;
-    border-radius: 0;
-    position: relative;
-    letter-spacing: 0.16px;
-    margin: 0;
-    min-width: auto;
-    -webkit-transition: all .3s;
-    transition: all .3s;
-}
-
-.l-right {
-    float: right;
-}
-
-button, html input[type='button'], input[type='reset'], input[type='submit'] {
-    -webkit-appearance: button;
-    cursor: pointer;
-}
-
-button, select {
-    text-transform: none;
-}
-
-button {
-    overflow: visible;
-}
-
-button, input, optgroup, select, textarea {
-    color: inherit;
-    font: inherit;
-    margin: 0;
-}
-
-.main-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.main-nav ul li {
-    margin: 0;
-}
-
-.l-left {
-    float: left;
-}
-
-.l-right {
-    float: right;
-}
-
-.background-sky {
-    background-color: #1976d2;
-    background: -webkit-linear-gradient(305deg, #0D47A1, #42A5F5);
-    background: linear-gradient(145deg, #0D47A1, #42A5F5);
-    color: #fff;
-}
-
-.l-relative, .docs-content {
-    position: relative;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
-    display: block;
-}
-
-.hero.is-large {
-    height: 560px;
-    padding-top: 32px;
-    text-align: center;
-}
-
-.hero {
-    box-sizing: border-box;
-    box-shadow: none;
-    padding: 48px 48px 32px 48px;
-    position: relative;
-    height: 168px;
-}
-
-.background-superhero-paper {
-    background: url("/resources/images/backgrounds/super-hero-large.png") no-repeat bottom center, -webkit-linear-gradient(305deg, #0D47A1, #42A5F5);
-    background: url("/resources/images/backgrounds/super-hero-large.png") no-repeat bottom center, linear-gradient(145deg, #0D47A1, #42A5F5);
-    background-blend-mode: multiply;
-    background-size: 100%;
-}
-
-.hero.is-large .hero-logo {
-    -webkit-filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.24));
-    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.24));
-    margin-bottom: 8px;
-    opacity: 1;
-    padding: 0;
-    width: 240px;
-}
-
-img {
-    border: 0;
-}
-
-.hero.is-large h1 {
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    margin-bottom: 32px;
-}
-
-.text-headline, .docs-content h3 {
-    margin: 0 0 16px 0;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 32px;
-}
-
-.hero.is-large .hero-cta, .hero.is-large .hero-cta.md-button {
-    background: rgba(255, 255, 255, 0.87);
-    border-radius: 2px;
-    color: #1565c0;
-    font-weight: 500;
-    padding: 0 64px;
-    -webkit-transition: all .3s;
-    transition: all .3s;
-}
-
-.button.button-plain, a.button.md-button.button-plain {
-    background: #fff;
-    color: rgba(37, 50, 56, 0.87);
-}
-
-.button.button-large, a.button.md-button.button-large {
-    font-size: 15px;
-    line-height: 48px;
-    padding: 0 24px;
-}
-
-.button, a.button.md-button {
-    display: inline-block;
-    line-height: 32px;
-    padding: 0 16px;
-    font-size: 14px;
-    font-weight: 400;
-    border-radius: 3px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    border: none;
-}
-
-.hero .button {
-    margin: 0 8px;
-}
-
-.l-content {
-    padding: 64px 96px;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.home-rows {
-    margin-top: 112px;
-}
-
-.home-row {
-    max-width: 920px;
-    margin: 0 0 60px 0;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.home-row .promo-image-container, .home-row .text-container {
-    max-width: 50%;
-}
-
-.main-footer nav {
-    padding: 48px;
-}
-
-.grid-fluid::after, .grid-fluid::before {
-    content: ".";
-    clear: both;
-    display: block;
-    overflow: hidden;
-    visibility: hidden;
-    font-size: 0px;
-    line-height: 0;
-    width: 0px;
-    height: 0px;
-}
-
-.background-midnight {
-    background: #263238;
-    color: #fff;
-}
-
-.grid-fluid {
-    *zoom: 1:;
-}
-
-.grid-fluid, .grid-fixed {
-    margin: 0 auto;
-}
-
-.grid-fluid .c3 {
-    width: 22.91%;
-}
-
-.grid-fluid .c1, .grid-fluid .c2, .grid-fluid .c3, .grid-fluid .c4, .grid-fluid .c5, .grid-fluid .c6, .grid-fluid .c7, .grid-fluid .c8, .grid-fluid .c9, .grid-fluid .c10, .grid-fluid .c11, .grid-fluid .c12 {
-    margin-right: 1.04%;
-    margin-left: 1.04%;
-}
-
-.grid-fluid .c1, .grid-fixed .c1, .grid-fluid .c2, .grid-fixed .c2, .grid-fluid .c3, .grid-fixed .c3, .grid-fluid .c4, .grid-fixed .c4, .grid-fluid .c5, .grid-fixed .c5, .grid-fluid .c6, .grid-fixed .c6, .grid-fluid .c7, .grid-fixed .c7, .grid-fluid .c8, .grid-fixed .c8, .grid-fluid .c9, .grid-fixed .c9, .grid-fluid .c10, .grid-fixed .c10, .grid-fluid .c11, .grid-fixed .c11, .grid-fluid .c12, .grid-fixed .c12 {
-    display: inline;
-    float: left;
-}
-
-.background-midnight {
-    background: #263238;
-    color: #fff;
-}
-
-.main-footer .logo-inverse-large {
-    background: url("/resources/images/logos/inverse/shield/shield-large.png") 0 0/contain no-repeat;
-    height: 200px;
-    width: 200px;
-    max-width: 100%;
-}
-
-.main-footer nav h3 {
-    font-size: 21px;
-}
-
-.main-footer h3 {
-    font-size: 20px;
-}
-
-.text-headline, .docs-content h3 {
-    margin: 0 0 16px 0;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 32px;
-}
-
-table th, .text-subhead, .text-body, .docs-content p, .docs-content ul, .docs-content ol {
-    margin: 0 0 24px 0;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    padding: 0;
+.meineklasse {
+    font-size: x-large;
+    color: #002a80;
 }
