--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,7 +1,9 @@
 <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="#">Navbar Link</a></li>
+            <li><a [routerLink]="['home']">Home</a></li>
+            <li><a [routerLink]="['detail']">Detail</a></li>
+            <li><a [routerLink]="['about']">About</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav" style="transform: translateX(-100%);">
@@ -30,8 +32,8 @@
             <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
         <div class="row center">
-            <a href="http://materializecss.com/getting-started.html" id="download-button"
-               class="btn-large waves-effect waves-light orange">Get Started</a>
+            <a [routerLink]="['home']" id="download-button"
+               class="btn-large waves-effect waves-light btn-primary">Get Started</a>
         </div>
         <br><br>
 
