--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -7,29 +7,33 @@
         </div>
     </div>
 </div>
+
 <div class="container">
-    <div class="card-container">
-        <div>
-            <form (ngSubmit)="submitState(localState.value)">
-                <div class="form-group input-field">
-                    <i class="material-icons prefix">account_circle</i>
-                    <label>Gebe Deinen Namen ein</label>
-                    <input [value]="localState.value"
-                           (input)="localState.value = $event.target.value"
-                           type="text" class="form-control" id="name" required autofocus>
-                </div>
-                <button type="submit" class="btn btn-default waves-effect waves-light">Los Geht's</button>
-            </form>
-            <!--
-                <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
-                Rather than wiring up two-way data-binding ourselves with [value] and (input)
-                we can use Angular's [(ngModel)] syntax
-                <input type="text" name="textInput" [(ngModel)]="localState.value" autofocus>
-              -->
-
-            <pre>this.localState = {{ localState | json }}</pre>
-
+    <div class="row">
+        <div class="col l6">
+            <h2>Anmeldung</h2>
+            <p>Geben Sie ihren Namen ein, um ein neues
+                Haushaltsbuch zu beginnen.</p>
         </div>
+        <div class="col l6">
+            <div class="card">
 
+                <form (ngSubmit)="submitState(localState.value)">
+                    <div class="card-content">
+                        <div class="form-group input-field">
+                            <i class="material-icons prefix">account_circle</i>
+                            <label>Gebe Deinen Namen ein</label>
+                            <input [value]="localState.value"
+                                   (input)="localState.value = $event.target.value"
+                                   type="text" class="form-control" id="name" required autofocus>
+                        </div>
+                    </div>
+                    <div class="card-action">
+                        <button type="submit" class="btn btn-default waves-effect waves-light">Los Geht's</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
     </div>
 </div>
