--- a/web/src/assets/css/main.css
+++ b/web/src/assets/css/main.css
@@ -11,15 +11,14 @@
 }
 
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-main {
-    flex: 1 0 auto;
+    padding-bottom: 3em;
 }
 
 footer {
     background-color: deeppink;
+    position: fixed;
+    padding: 10px;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
