--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -51,6 +51,6 @@
     <div class="footer-copyrightcontainer">
         <span>&copy; 2016 Matthias Haschka</span>
         | <span><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache Lizenz 2.0</a></span>
-        | <span>Build {{build}}</span>
+        | <span id="build">Build {{build}}</span>
     </div>
 </footer>
