--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -30,22 +30,22 @@
     <router-outlet></router-outlet>
 </main>
 
-<div class="container">
-    <div class="row">
-        <div class="col m12 l12">
-            <ul class="collapsible" data-collapsible="expandable">
-                <li>
-                    <div class="collapsible-header"><i class="material-icons">notifications</i>
-                        Webservice Response
-                    </div>
-                    <div class="collapsible-body">
-                        <pre>{{index}}</pre>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col m12 l12">-->
+<!--<ul class="collapsible" data-collapsible="expandable">-->
+<!--<li>-->
+<!--<div class="collapsible-header"><i class="material-icons">notifications</i>-->
+<!--Webservice Response-->
+<!--</div>-->
+<!--<div class="collapsible-body">-->
+<!--<pre>{{index}}</pre>-->
+<!--</div>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 <footer class="blue darken-4">
     <div class="footer-copyrightcontainer">
