WIP: Test für AppComponent mit jQuery und Materialize CSS / Einführung des Redux Pattern

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -25,7 +25,9 @@
                             <label>Gebe Deinen Namen ein</label>
                             <input [value]="localState.value"
                                    (input)="localState.value = $event.target.value"
-                                   type="text" class="form-control" id="name" required autofocus>
+                                   type="text" class="form-control"
+                                   id="name"
+                                   required autofocus>
                         </div>
                     </div>
                     <div class="card-action">
