SideNav einblenden, beim Klick auf Menü-Schaltfläche

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -8,7 +8,7 @@
             <li><a href="http://localhost:8080/browser.html#/api">API Browser</a></li>
         </ul>
 
-        <a href="#" data-activates="side-menu" class="button-collapse">
+        <a href="#" data-activates="side-menu" class="button-collapse" materialize="sideNav">
             <i class="material-icons">menu</i>
         </a>
 
