Protractor Tests für das Seitenmenü.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -50,6 +50,6 @@
     <div class="footer-copyrightcontainer">
         <span>&copy; 2016 Matthias Haschka</span>
         | <span><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache Lizenz 2.0</a></span>
-        | <span id="build">Build {{(build$ | async) }}</span>
+        | <span id="api">API {{ (api$ | async) }}</span>
     </div>
 </footer>
