--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -25,6 +25,21 @@
     </div>
 </nav>
 
+<div class="row" *ngIf="(verbunden$ | async ) == false">
+    <div class="col s12 m6">
+        <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+                <span class="card-title">Card Title</span>
+                <p>Die Anwendung kann nicht geladen werden.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+                <a href="#">This is a link</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <main>
     <router-outlet></router-outlet>
 </main>
