--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -18,15 +18,14 @@
         <div class="col l6">
             <div class="card">
 
-                <form (ngSubmit)="submitState(localState.value)">
+                <form [formGroup]="form" (ngSubmit)="submitState({name: 'asdasd'})">
                     <div class="card-content">
                         <div class="form-group input-field">
                             <i class="material-icons prefix">account_circle</i>
-                            <label>Gebe Deinen Namen ein</label>
-                            <input [value]="localState.value"
-                                   (input)="localState.value = $event.target.value"
-                                   type="text" class="form-control"
+                            <label for="name">Gebe Deinen Namen ein</label>
+                            <input type="text" class="form-control"
                                    id="name"
+                                   formControlName="name"
                                    required autofocus>
                         </div>
                     </div>
