--- a/web/fake/hal-browser/styles.css
+++ b/web/fake/hal-browser/styles.css
@@ -19,7 +19,7 @@ html, body, #browser, .hal-browser { height: 100%; }
   resize: vertical;
   width: 100%;
   height: 40px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
