--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,43 +1,7 @@
 <td-layout-nav toolbarTitle="Haushaltsbuch">
-    <td-layout-card-over cardTitle="Willkommen" cardSubtitle="Meine privaten Finanzen" cardWidth="75">
-        <main>
-            <router-outlet></router-outlet>
-        </main>
+    <router-outlet></router-outlet>
 
-    </td-layout-card-over>
+    <td-layout-footer>
+        <span id="api" *ngIf="(api$ | async)">API {{ (api$ | async) }}</span>
+    </td-layout-footer>
 </td-layout-nav>
-<!--<nav class="navbar-fixed blue darken-3">-->
-    <!--<div class="nav-wrapper">-->
-        <!--<a href="#" class="brand-logo"><i class="material-icons">credit_card</i> Haushaltsbuch</a>-->
-        <!--<ul class="right hide-on-med-and-down">-->
-            <!--<li><a [routerLink]="['home']">Home</a></li>-->
-            <!--<li><a [routerLink]="['detail']">Detail</a></li>-->
-            <!--<li><a [routerLink]="['about']">About</a></li>-->
-            <!--<li><a href="http://localhost:8080/browser.html#/api">API Browser</a></li>-->
-        <!--</ul>-->
-
-        <!--<a href="#" data-activates="side-menu" class="button-collapse" materialize="sideNav">-->
-            <!--<i class="material-icons">menu</i>-->
-        <!--</a>-->
-
-        <!--<ul class="side-nav" id="side-menu">-->
-            <!--<li>-->
-                <!--<img src="assets/icon/16599-illustration-of-stacks-of-gold-coins-ve.svg" width="100%"/>-->
-            <!--</li>-->
-            <!--<li><a [routerLink]="['home']"><i class="material-icons">home</i>Home</a></li>-->
-            <!--<li><a [routerLink]="['detail']"><i class="material-icons">details</i>Detail</a></li>-->
-            <!--<li><a [routerLink]="['about']"><i class="material-icons">info</i>About</a></li>-->
-            <!--<li><a href="http://localhost:8080/browser.html#/api"><i class="material-icons">open_in_browser</i>API-->
-                <!--Browser</a></li>-->
-        <!--</ul>-->
-    <!--</div>-->
-<!--</nav>-->
-
-
-<!--<footer class="blue darken-4">-->
-    <!--<div class="footer-copyrightcontainer">-->
-        <!--<span>&copy; 2016 Matthias Haschka</span>-->
-        <!--| <span><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache Lizenz 2.0</a></span>-->
-        <!--| <span id="api" *ngIf="(api$ | async)">API {{ (api$ | async) }}</span>-->
-    <!--</div>-->
-<!--</footer>-->
